Comment references to server-rendered context menu
Calls to context_menu_entry will need to be replaced with a new API.

See https://github.com/opf/openproject/commit/d30ce4853937dfc1a8e9336583f0aa473323ac5e

Signed-off-by: Alex Coles <alex@alexbcoles.com>

--- a/app/views/hooks/costs/_view_work_packages_context_menu_end.html.erb
+++ b/app/views/hooks/costs/_view_work_packages_context_menu_end.html.erb
@@ -28,7 +28,8 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 %>
 
     <% unless possible_cost_objects.empty? -%>
-      <%= context_menu_entry title: l(:label_cost_object),
+      <%# TODO: replace with solution that works with Angular-based context menu %>
+      <%# context_menu_entry title: l(:label_cost_object),
                              back_url: back,
                              updated_object_ids: issues.collect(&:id),
                              collection: possible_cost_objects,
